demo/kanarini-demo/services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: emoji-canary
  namespace: kanarini-demo
  labels:
    app: emoji
    track: canary
spec:
  selector:
    app: emoji
    track: canary
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
  - protocol: TCP
    port: 9090
    targetPort: 9090
    name: metrics
---
kind: Service
apiVersion: v1
metadata:
  name: emoji-stable
  namespace: kanarini-demo
  labels:
    app: emoji
    track: stable
spec:
  selector:
    app: emoji
    track: stable
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
  - protocol: TCP
    port: 9090
    targetPort: 9090
    name: metrics
---
kind: Service
apiVersion: v1
metadata:
  name: emoji-canary-public
  namespace: kanarini-demo
  labels:
    app: emoji
    track: canary
spec:
  selector:
    app: emoji
    track: canary
  ports:
  - name: port-1
    nodePort: 30980
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: port-2
    nodePort: 30990
    port: 9090
    protocol: TCP
    targetPort: 9090
  sessionAffinity: None
  type: NodePort
---
kind: Service
apiVersion: v1
metadata:
  name: emoji-stable-public
  namespace: kanarini-demo
  labels:
    app: emoji
    track: stable
spec:
  selector:
    app: emoji
    track: stable
  ports:
  - name: port-1
    nodePort: 30981
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: port-2
    nodePort: 30991
    port: 9090
    protocol: TCP
    targetPort: 9090
  sessionAffinity: None
  type: NodePort
